# lvgl_simulator

./: .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
App/include/: lv_conf.h
App/src/: main.c  mouse_cursor_icon.c
